--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -4,7 +4,6 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-
   font-weight: normal;
 }
 
@@ -32,6 +31,7 @@ a,
     padding: 3rem 3rem;
     place-self: flex-start;
     place-items: baseline;
+    margin: 0%;
 
     /*
     display: grid;
