--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,16 +3,19 @@
 #app {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   font-weight: normal;
+  padding: 1rem 3rem;
+  place-self: flex-start;
+  place-items: baseline;
+  margin: 0%;
 }
 
-a,
+/* a,
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
-}
+} */
 
 @media (hover: hover) {
   a:hover {
@@ -21,43 +24,44 @@ a,
 }
 
 @media (min-width: 1024px) {
-  body {
+  /* body {
     display: flex;
     place-items: center;
-  }
+  } */
 
-  #app {
-    display: grid;
+  /* #app {
     padding: 3rem 3rem;
     place-self: flex-start;
     place-items: baseline;
-    margin: 0%;
-
-    /*
+    margin: 0%;  
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
-    */
-  }
+  } */
 }
 
 i.bi {
-  font-size: 3rem; /* Größe anpassen */
-  margin-right: 10px; /* Abstand hinzufügen */
-  color: #007bff; /* Farbe ändern */
+  font-size: 3rem;
+  /* Größe anpassen */
+  margin-right: 10px;
+  /* Abstand hinzufügen */
+  color: #007bff;
+  /* Farbe ändern */
 }
 
 /* Standardgröße der Icons */
 .bi {
   font-size: 1.5rem;
-  color: #007bff; /* Farbe ändern */
+  color: #007bff;
+  /* Farbe ändern */
 }
 
 /* Größe der Icons auf Mobilgeräten ändern */
 @media (max-width: 767px) {
   .bi {
     font-size: 1rem;
-    color: #007bff; /* Farbe ändern */
+    color: #007bff;
+    /* Farbe ändern */
   }
 }
 
@@ -72,7 +76,8 @@ i.bi {
   cursor: pointer;
   padding: 0;
   margin: 0;
-  position: relative; /* Damit der Tooltip relativ zu diesem Button positioniert werden kann */
+  position: relative;
+  /* Damit der Tooltip relativ zu diesem Button positioniert werden kann */
 }
 
 .tooltip-text {
@@ -84,9 +89,11 @@ i.bi {
   padding: 5px 10px;
   position: absolute;
   z-index: 1;
-  bottom: 125%; /* Positionieren Sie den Tooltip oberhalb des Elements */
+  bottom: 125%;
+  /* Positionieren Sie den Tooltip oberhalb des Elements */
   left: 50%;
-  margin-left: -60px; /* Negative Halbbreite des Tooltips, um ihn zu zentrieren */
+  margin-left: -60px;
+  /* Negative Halbbreite des Tooltips, um ihn zu zentrieren */
   opacity: 0;
   transition: opacity 0.3s;
 }
@@ -96,11 +103,13 @@ i.bi {
   opacity: 1;
 }
 
-
-
 ul {
-  list-style-type: none; /* Entfernt die Aufzählungszeichen */
-  padding: 0; /* Entfernt das Standard-Padding */
-  display: flex; /* Verwendet Flexbox, um die Elemente nebeneinander anzuzeigen */
-  gap: 10px; /* Fügt einen Abstand zwischen den Icons hinzu */
+  list-style-type: none;
+  /* Entfernt die Aufzählungszeichen */
+  padding: 0;
+  /* Entfernt das Standard-Padding */
+  display: flex;
+  /* Verwendet Flexbox, um die Elemente nebeneinander anzuzeigen */
+  gap: 10px;
+  /* Fügt einen Abstand zwischen den Icons hinzu */
 }
